// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifiedIcon renders correctly, by default 1`] = `
<Svg
  height={16}
  preserveAspectRatio="xMidYMid meet"
  version="1.1"
  viewBox="0 0 28.2 29.8"
  width={16}
  xmlSpace="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <Path
    clipRule="evenodd"
    d="M14.1,2L3.5,5.6c0,0,0,8.9,0,11c0,8.5,10.6,11.2,10.6,11.2s10.6-2.7,10.6-11.2c0-2.1,0-11,0-11L14.1,2z"
    fill="none"
    fillRule="evenodd"
    stroke="#000"
    strokeMiterlimit={10}
  />
  <Polyline
    clipRule="evenodd"
    fill="none"
    fillRule="evenodd"
    points="7.9,14.3 11.9,18.3 20.3,9.8"
    stroke="#000"
    strokeMiterlimit={10}
  />
</Svg>
`;

exports[`VerifiedIcon renders correctly, when modified 1`] = `
<Svg
  height={32}
  preserveAspectRatio="xMidYMid meet"
  version="1.1"
  viewBox="0 0 28.2 29.8"
  width={32}
  xmlSpace="preserve"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
>
  <Path
    clipRule="evenodd"
    d="M14.1,2L3.5,5.6c0,0,0,8.9,0,11c0,8.5,10.6,11.2,10.6,11.2s10.6-2.7,10.6-11.2c0-2.1,0-11,0-11L14.1,2z"
    fill="none"
    fillRule="evenodd"
    stroke="#fff"
    strokeMiterlimit={10}
  />
  <Polyline
    clipRule="evenodd"
    fill="none"
    fillRule="evenodd"
    points="7.9,14.3 11.9,18.3 20.3,9.8"
    stroke="#fff"
    strokeMiterlimit={10}
  />
</Svg>
`;
